fix: correct movie fetch query for paginated results